--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Kyy-Userbot",
+  "name": "Ouraa-ubot",
   "description": "USERBOT KHUSUS YANG DIGUNAKAN UNTUK BERSENANG-SENANG DI TELEGRAM.",
-  "logo": "https://telegra.ph/file/276d22aac9f400898cd27.jpg",
+  "logo": "https://telegra.ph/file/cb787d78795d6e6a29530.jpg",
   "keywords": [
     "telegram",
     "userbot",
@@ -9,7 +9,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/muhammadrizky16/Kyy-Userbot/Kyy-Userbot",
+  "repository": "https://github.com/Ouraaa/Ouraa-ubot/Ouraa-ubot",
   "telegram": "https://t.me/IDnyaKosong",
   "success_url": "https://t.me/NastyProject",
   "stack": "container",
@@ -24,7 +24,7 @@
     },
     "ALIVE_LOGO": {
       "description": "Gambar dalam module .alive",
-      "value": "https://telegra.ph/file/276d22aac9f400898cd27.jpg",
+      "value": "https://telegra.ph/file/cb787d78795d6e6a29530.jpg",
       "required": false
     },
      "STRING_SESSION": {
